--- a/src/components/LinkBack/LinkBack.module.css
+++ b/src/components/LinkBack/LinkBack.module.css
@@ -2,6 +2,11 @@
   display: inline-flex;
   align-items: center;
   gap: 12px;
+  cursor: pointer;
+}
+
+.wrapper:hover {
+  opacity: 0.8;
 }
 
 .text {
